--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -1,41 +1,37 @@
 name: build
 
-on:
-  push:
-    branches:
-      - master
+# on:
+#   push:
+#     branches:
+#       - master
 
-jobs:
-  docker_images:
-    name: docker images
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        image: [gorse-master, gorse-server, gorse-worker]
-    steps:
-      - name: Pull source
-        uses: actions/checkout@v1
+# jobs:
+#   docker_images:
+#     name: docker images
+#     runs-on: ubuntu-latest
+#     strategy:
+#       matrix:
+#         image: [gorse-master, gorse-server, gorse-worker]
+#     steps:
+#       - name: Pull source
+#         uses: actions/checkout@v1
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
+#       - name: Set up Docker Buildx
+#         uses: docker/setup-buildx-action@v1
 
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#       - name: Login to DockerHub
+#         uses: docker/login-action@v1
+#         with:
+#           username: ${{ secrets.DOCKERHUB_USERNAME }}
+#           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build docker image
-        uses: docker/build-push-action@v2.6.1
-        with:
-          context: .
-          platforms: linux/amd64,linux/arm64
-          file: cmd/${{ matrix.image }}/Dockerfile
-          push: true
-          tags: neurastudios/${{ matrix.image }}:nightly
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-      - name: Resolve Images on Description
-        run: |
-          sed -i -E "s/src=\"assets\//src=\"https:\/\/github.com\/gorse-io\/gorse\/raw\/master\/assets\//" README.md
+#       - name: Build docker image
+#         uses: docker/build-push-action@v2.6.1
+#         with:
+#           context: .
+#           platforms: linux/amd64,linux/arm64
+#           file: cmd/${{ matrix.image }}/Dockerfile
+#           push: true
+#           tags: neurastudios/${{ matrix.image }}:nightly
+#           cache-from: type=gha
+#           cache-to: type=gha,mode=max
