--- a/cmd/gorse-worker/Dockerfile
+++ b/cmd/gorse-worker/Dockerfile
@@ -3,7 +3,7 @@
 ############################
 # STEP 1 build executable binary
 ############################
-FROM golang:1.21
+FROM golang:1.21 as build
 
 WORKDIR /src
 
@@ -25,11 +25,11 @@ RUN /src/cmd/gorse-worker/gorse-worker --version
 ############################
 # STEP 2 build a small image
 ############################
-FROM scratch
+FROM alpine
 
-COPY --from=0 /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
-
-COPY --from=0 /src/cmd/gorse-worker/gorse-worker /usr/bin/gorse-worker
+COPY --from=build /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
+COPY --from=build /src/cmd/gorse-worker /usr/bin
+RUN /usr/bin/gorse-worker --version
 
 ENV USER root
 
