--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -50,6 +50,11 @@ jobs:
           --health-timeout 5s
           --health-retries 5
 
+      clickhouse:
+        image: yandex/clickhouse-server:21.10
+        ports:
+          - 8123
+
       redis:
         image: redis/redis-stack:6.2.6-v9
         ports:
@@ -102,6 +107,8 @@ jobs:
         POSTGRES_URI: postgres://gorse:gorse_pass@localhost:${{ job.services.postgres.ports[5432] }}/
         # MongoDB
         MONGO_URI: mongodb://root:password@localhost:${{ job.services.mongo.ports[27017] }}/
+        # ClickHouse
+        CLICKHOUSE_URI: clickhouse://localhost:${{ job.services.clickhouse.ports[8123] }}/
         # Redis
         REDIS_URI: redis://localhost:${{ job.services.redis.ports[6379] }}/
 
@@ -113,7 +120,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        database: [mysql, postgres, mongo]
+        database: [mysql, postgres, mongo, clickhouse]
     steps:
     - uses: actions/checkout@v1
 
