--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -54,6 +54,11 @@ jobs:
         image: yandex/clickhouse-server:21.10
         ports:
           - 8123
+        options: >-
+          --health-cmd="clickhouse-client --query 'SELECT 1'" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=5
 
       redis:
         image: redis/redis-stack:6.2.6-v9
