--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -120,7 +120,7 @@ jobs:
     - name: Upload 
       run: bash <(curl -s https://codecov.io/bash)
 
-  unit_test:
+  unit_test_m1:
     name: unit tests (M1)
     runs-on: macos-latest
     steps:
