--- a/config/config.toml
+++ b/config/config.toml
@@ -276,5 +276,7 @@ client_id = ""
 client_secret = ""
 
 # URL used by the OAuth provider to redirect users after they are successfully authenticated
-# (also referred to as the callback URL). You should set this to your Gorse dashboard URL.
+# (also referred to as the callback URL). You should set this to the concatenation of the 
+# Gorse dashboard URL and "/callback/oauth2". For example, if the Gorse dashboard URL is 
+# http://localhost:8088, the redirect URL should be: http://localhost:8088/callback/oauth2
 redirect_url = ""
