--- a/config/config.toml
+++ b/config/config.toml
@@ -37,6 +37,18 @@ port = 8086
 # gRPC host of the master node. The default values is "0.0.0.0".
 host = "0.0.0.0"
 
+# Enable SSL for the gRPC communication. The default value is false.
+ssl_mode = false
+
+# SSL certification authority for the gRPC communication.
+ssl_ca = ""
+
+# SSL certification for the gRPC communication.
+ssl_cert = ""
+
+# SSL certification key for the gRPC communication.
+ssl_key = ""
+
 # HTTP port of the master node. The default values is 8088.
 http_port = 8088
 
