--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -93,7 +93,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Test
-      run: go test -timeout 20m -v ./... -coverprofile=coverage.txt -covermode=atomic
+      run: go test -timeout 20m -v ./... -coverprofile=coverage.txt -covermode=atomic -coverpkg=./...
       env:
         # MySQL
         MYSQL_URI: mysql://root:password@tcp(localhost:${{ job.services.mysql.ports[3306] }})/
