--- a/config/config.toml
+++ b/config/config.toml
@@ -139,10 +139,10 @@ popular_window = "720h"
 name = "most_starred_weekly"
 
 # The score function for items in the leaderboard.
-score = "count(Feedback.FeedbackType, .FeedbackType == 'star')"
+score = "count(feedback, .FeedbackType == 'star')"
 
 # The filter for items in the leaderboard.
-filter = "(Item.Timestamp > now()).Hours() < 168"
+filter = "(now() - item.Timestamp).Hours() < 168"
 
 [recommend.user_neighbors]
 
