--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -256,6 +256,10 @@ jobs:
           git clone https://github.com/gorse-cloud/redis-stack.git
           cd redis-stack
           docker compose up -d
+          while true; do
+            docker compose exec redis-1 redis-cli -p 7005 ping | grep PONG && break
+            sleep 1
+          done
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v2
