--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -250,6 +250,15 @@ jobs:
         with:
           packages: redis-tools
 
+      - name: Setup Redis cluster
+        run: |
+          git clone https://github.com/gorse-cloud/redis-stack.git
+          docker compose -f redis-stack/docker-compose.yml --project-directory redis-stack up -d
+          for i in {1..5}; do
+            redis-cli -p 7005 ping | grep PONG && break
+            sleep 10
+          done
+
       - name: Set up Go 1.23.x
         uses: actions/setup-go@v4
         with:
@@ -265,14 +274,7 @@ jobs:
           MYSQL_URI: mysql://root:password@tcp(localhost:${{ job.services.mariadb.ports[3306] }})/
 
       - name: Test Redis cluster
-        run: |
-          git clone https://github.com/gorse-cloud/redis-stack.git
-          docker compose -f redis-stack/docker-compose.yml --project-directory redis-stack up -d
-          for i in {1..5}; do
-            redis-cli -p 7005 ping | grep PONG && break
-            sleep 10
-          done
-          go test ./storage/cache -run ^TestRedis
+        run: go test ./storage/cache -run ^TestRedis
         env:
           REDIS_URI: redis+cluster://localhost:7005
 
