--- a/.github/workflows/build_release.yml
+++ b/.github/workflows/build_release.yml
@@ -9,15 +9,11 @@ jobs:
     name: build binaries
     runs-on: ubuntu-latest
     steps:
-      - name: Set up Go 1.23.x
-        uses: actions/setup-go@v4
+      - uses: actions/checkout@v2
+      - uses: actions/setup-go@v5
         with:
-          go-version: 1.23.x
-        id: go
-        
-      - name: Pull source
-        uses: actions/checkout@v1
-        
+          go-version-file: ./go.mod
+
       - name: Install gox
         run: go install github.com/mitchellh/gox@master
         
