--- a/cmd/gorse-server/Dockerfile.windows
+++ b/cmd/gorse-server/Dockerfile.windows
@@ -1,7 +1,7 @@
 ############################
 # STEP 1 build executable binary
 ############################
-FROM golang:1.23
+FROM golang
 
 COPY . gorse
 
