--- a/cmd/gorse-in-one/Dockerfile.windows
+++ b/cmd/gorse-in-one/Dockerfile.windows
@@ -1,7 +1,7 @@
 ############################
 # STEP 1 build executable binary
 ############################
-FROM golang
+FROM golang:1.24
 
 COPY . gorse
 
