--- a/config/config.toml
+++ b/config/config.toml
@@ -341,8 +341,23 @@ auth_token = "ollama"
 # Name of chat completion model.
 chat_completion_model = "qwen2.5"
 
+# Maximum requests per minute for chat completion.
+chat_completion_rpm = 15000
+
+# Maximum tokens per minute for chat completion.
+chat_completion_tpm = 1200000
+
 # Name of embedding model.
 embedding_model = "mxbai-embed-large"
 
 # Dimensions of embedding vectors.
 embedding_dimensions = 1024
+
+# Maximum requests per minute for embedding.
+embedding_rpm = 1800
+
+# Maximum tokens per minute for embedding.
+embedding_tpm = 1200000
+
+# Log file for OpenAI API.
+log_file = "openai.log"
