--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -91,7 +91,7 @@ jobs:
         uses: docker/build-push-action@v2.6.1
         with:
           context: .
-          platforms: linux/amd64
+          platforms: linux/amd64,linux/arm64
           file: cmd/${{ matrix.image }}/Dockerfile.cuda
           push: true
           tags: zhenghaoz/${{ matrix.image }}:nightly-cuda12.8
