--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -79,7 +79,7 @@ jobs:
         wget https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
         wget https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
         wget https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
-        wget https://pub-64226d9f34c64d6f829f5b63a5540d27.r2.dev/datasets/mnist.zip -P ~/.gorse/download
+        wget https://cdn.gorse.io/datasets/mnist.zip -P ~/.gorse/download
         unzip ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
         unzip ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
         unzip ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
@@ -124,7 +124,7 @@ jobs:
         wget https://cdn.gorse.io/datasets/frappe.zip -P ~/.gorse/download
         wget https://cdn.gorse.io/datasets/ml-tag.zip -P ~/.gorse/download
         wget https://cdn.gorse.io/datasets/criteo.zip -P ~/.gorse/download
-        wget https://pub-64226d9f34c64d6f829f5b63a5540d27.r2.dev/datasets/mnist.zip -P ~/.gorse/download
+        wget https://cdn.gorse.io/datasets/mnist.zip -P ~/.gorse/download
         unzip ~/.gorse/download/ml-100k.zip -d ~/.gorse/dataset
         unzip ~/.gorse/download/ml-1m.zip -d ~/.gorse/dataset
         unzip ~/.gorse/download/pinterest-20.zip -d ~/.gorse/dataset
@@ -155,7 +155,7 @@ jobs:
         Invoke-WebRequest https://cdn.gorse.io/datasets/frappe.zip -OutFile ~/.gorse/download/frappe.zip
         Invoke-WebRequest https://cdn.gorse.io/datasets/ml-tag.zip -OutFile ~/.gorse/download/ml-tag.zip
         Invoke-WebRequest https://cdn.gorse.io/datasets/criteo.zip -OutFile ~/.gorse/download/criteo.zip
-        Invoke-WebRequest https://pub-64226d9f34c64d6f829f5b63a5540d27.r2.dev/datasets/mnist.zip -OutFile ~/.gorse/download/mnist.zip
+        Invoke-WebRequest https://cdn.gorse.io/datasets/mnist.zip -OutFile ~/.gorse/download/mnist.zip
         Expand-Archive ~/.gorse/download/ml-100k.zip -DestinationPath ~/.gorse/dataset
         Expand-Archive ~/.gorse/download/ml-1m.zip -DestinationPath ~/.gorse/dataset
         Expand-Archive ~/.gorse/download/pinterest-20.zip -DestinationPath ~/.gorse/dataset
