--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -75,6 +75,22 @@ jobs:
       matrix:
         image: [gorse-master, gorse-server, gorse-worker, gorse-in-one]
     steps:
+      - name: Free Disk Space (Ubuntu)
+        uses: jlumbroso/free-disk-space@main
+        with:
+          # this might remove tools that are actually needed,
+          # if set to "true" but frees about 6 GB
+          tool-cache: false
+          
+          # all of these default to true, but feel free to set to
+          # "false" if necessary for your workflow
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: false
+          docker-images: false
+          swap-storage: false
+
       - name: Pull source
         uses: actions/checkout@v1
 
